--- a/SuperSenha/Base.lproj/Main.storyboard
+++ b/SuperSenha/Base.lproj/Main.storyboard
@@ -212,7 +212,7 @@
                                     <color key="titleColor" red="1" green="0.90115892769999995" blue="0.96852073760000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Y7H-QC-Xmu" kind="show" id="abX-7s-FGN"/>
+                                    <segue destination="Y7H-QC-Xmu" kind="presentation" id="cGC-KH-lMi"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVu-Xf-eJv">
@@ -269,17 +269,17 @@
             <objects>
                 <viewController id="Y7H-QC-Xmu" customClass="SecurityTipsViewController" customModule="SuperSenha" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qbc-cC-y1C">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 dicas para ter uma senha forte" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="srU-Iv-Z81">
-                                <rect key="frame" x="64.666666666666686" y="152" width="299" height="24"/>
+                                <rect key="frame" x="64.666666666666686" y="12" width="299" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <color key="textColor" red="0.89803921568627454" green="0.70588235294117641" blue="0.89411764705882346" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcO-dF-FaI">
-                                <rect key="frame" x="354" y="834" width="50" height="32"/>
+                                <rect key="frame" x="354" y="780" width="50" height="32"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="Fechar">
                                     <color key="titleColor" red="0.89803921568627454" green="0.70588235294117641" blue="0.89411764705882346" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -289,7 +289,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" usesAttributedText="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KqD-hX-yTq">
-                                <rect key="frame" x="33" y="192" width="362" height="626"/>
+                                <rect key="frame" x="33" y="52" width="362" height="712"/>
                                 <color key="backgroundColor" red="0.59607843140000005" green="0.14117647059999999" blue="0.39607843139999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <attributedString key="attributedText">
                                     <fragment content="1. Escolha senhas fáceis de lembrar ">
